Bug 511722 - active window screenshot has defective border/shadow
Summary: active window screenshot has defective border/shadow
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.80
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-06 16:36 UTC by Harald Sitter
Modified: 2025-11-08 11:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.3
Sentry Crash Report:


Attachments
defect (101.35 KB, image/png)
2025-11-06 16:36 UTC, Harald Sitter
Details
area screenshot (152.83 KB, image/png)
2025-11-06 16:37 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2025-11-06 16:36:45 UTC
Created attachment 186548 [details]
defect

SUMMARY
Taking a screenshot of 'active window' using spectacle results in a screenshot with slightly defunct shadow along the window border.

STEPS TO REPRODUCE
1. spectacle
2. new screenshot
3. active window
4. click on a window

OBSERVED RESULT
Border line seems offset by a pixel?

EXPECTED RESULT
Should look as when taking a full screen screenshot

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-11-02
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 64 GiB of RAM (62.7 GiB usable)
Graphics Processor: AMD Radeon RX 7800 XT

ADDITIONAL INFORMATION
I'm on x1.5 scaling. I'll attach two screenshots
Comment 1 Harald Sitter 2025-11-06 16:37:28 UTC
Created attachment 186549 [details]
area screenshot
Comment 2 Bug Janitor Service 2025-11-06 17:19:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8378
Comment 3 Zamundaaa 2025-11-07 03:46:08 UTC
Git commit 3392aeff2548b5321ff78fb8446f2728e4bbfb17 by Xaver Hugl.
Committed on 06/11/2025 at 17:18.
Pushed by zamundaaa into branch 'master'.

plugins/screenshot: use the correct scale when rendering window screenshots

M  +1    -1    src/plugins/screenshot/screenshot.cpp

https://invent.kde.org/plasma/kwin/-/commit/3392aeff2548b5321ff78fb8446f2728e4bbfb17
Comment 4 Zamundaaa 2025-11-07 15:36:17 UTC
Git commit 0335a6faf54a0df2755ab3d071486ffef9df19a0 by Xaver Hugl.
Committed on 07/11/2025 at 13:04.
Pushed by zamundaaa into branch 'Plasma/6.5'.

plugins/screenshot: use the correct scale when rendering window screenshots


(cherry picked from commit 3392aeff2548b5321ff78fb8446f2728e4bbfb17)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +1    -1    src/plugins/screenshot/screenshot.cpp

https://invent.kde.org/plasma/kwin/-/commit/0335a6faf54a0df2755ab3d071486ffef9df19a0