plugins/screenshot: use the correct scale when rendering window screenshots

BUG: 511722


(cherry picked from commit 3392aeff2548b5321ff78fb8446f2728e4bbfb17)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>